--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "update": "roll update",
     "install:dev": "roll install --dev",
     "update:dev": "roll update --dev",
-    "archive": "roll archive"
+    "archive": "roll archive -y"
   },
   "dependencies": {},
   "devDependencies": {
